Fix spacing for <ul>'s
Remove right padding since they have the bullet points hidden

--- a/src/Footer.css
+++ b/src/Footer.css
@@ -7,6 +7,7 @@
   color: white;
   border: 3px solid #33FF66;
   margin: 0;
+  padding-inline-start: 0px;
 }
 
 .Footer-link {
