--- a/src/SidePanel.css
+++ b/src/SidePanel.css
@@ -16,4 +16,5 @@
 
 .SidePanel > .List {
   list-style-type: none;
+  padding-inline-start: 0px;
 }
